--- a/Report/03 -LDA and Prior Seeding.ipynb
+++ b/Report/03 -LDA and Prior Seeding.ipynb
@@ -399,15 +399,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "topic_1 = ['buffer', 'overflow']\n",
-    "topic_2 = ['xss', 'crosssite']\n",
-    "topic_3 = ['sql', 'injection']\n",
-    "topic_4 = ['plugin']\n",
-    "topic_5 = ['cisco', 'ibm', 'oracle']     # Companies who found the vulnerability. "
+    "seed_0 = ['buffer', 'overflow']\n",
+    "seed_1 = ['xss', 'crosssite']\n",
+    "seed_2 = ['sql', 'injection']\n",
+    "seed_3 = ['plugin']\n",
+    "seed_4 = ['cisco', 'ibm', 'oracle']     # (Companies who find lots of vulnerabilities)"
    ]
   },
   {
@@ -433,18 +433,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makerow(seed):\n",
+    "    constant = (1 - (0.1 * len(seed))) / (len(vocab) - len(seed))\n",
+    "    row = np.empty(len(vocab))\n",
+    "    row.fill(constant)\n",
+    "    for word in seed:\n",
+    "        row[vocab.token2id[word]] = 0.1\n",
+    "    return row"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "topic_word_prior "
+    "seeds = dict()\n",
+    "for row in range(0,20):\n",
+    "    seeds[row] = makerow([])\n",
+    "seeds[0] = makerow(seed_0)\n",
+    "seeds[1] = makerow(seed_1)\n",
+    "seeds[2] = makerow(seed_2)\n",
+    "seeds[3] = makerow(seed_3)\n",
+    "seeds[4] = makerow(seed_4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then run our LDA with the new prior, keeping the same number of topics to ensure comparability."
+    "And as a quick sanity check:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topic_word_prior = []\n",
+    "for row in range(0, 19):\n",
+    "    topic_word_prior.append(seeds[row])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(topic_word_prior[0][vocab.token2id['buffer']])\n",
+    "print(topic_word_prior[0][vocab.token2id['buffer'] + 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks like we expected it to. We now run our LDA with the new prior, keeping the same number of topics to ensure comparability."
    ]
   },
   {
@@ -487,7 +537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally let's see if the auto-seeding does better. We not that it probably doesn't employ the time structure of the corpus given not all corpera have a meaningful time structure. If the auto-seeding does work it will be a slight confirmation that my idea wasn't total madness!"
+    "Finally let's see if the auto-seeding does better. We not that it probably doesn't employ the time structure of the corpus given not all corpera have a meaningful time structure. If the auto-seeding does work it will be a slight confirmation that the idea wasn't total madness!"
    ]
   },
   {
