--- a/Bill_Evidence/billseeding.ipynb
+++ b/Bill_Evidence/billseeding.ipynb
@@ -921,6 +921,132 @@
     "KL_sorting = sorted(KL_scores, key=KL_scores.get, reverse=True)\n",
     "KL_sorting"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = [[1, 4, 5], \n",
+    "    [-5, 8, 9]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 4, 5], [-5, 8, 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dict = dict()\n",
+    "test_dict[0] = 5\n",
+    "test_dict[1] = 6\n",
+    "test_dict[0] = 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makerow(seed):\n",
+    "    constant = (1 - (0.1 * len(seed))) / (len(vocab) - len(seed))\n",
+    "    row = np.empty(len(vocab))\n",
+    "    row.fill(constant)\n",
+    "    for word in seed:\n",
+    "        row[vocab.token2id[word]] = 0.1\n",
+    "    return row\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed_0 = ['buffer', 'overflow']\n",
+    "seed_1 = ['xss', 'crosssite']\n",
+    "seed_2 = ['sql', 'injection']\n",
+    "seed_3 = ['plugin']\n",
+    "seed_4 = ['cisco', 'ibm', 'oracle']\n",
+    "\n",
+    "seeds = dict()\n",
+    "for row in range(0,20):\n",
+    "    seeds[row] = makerow([])\n",
+    "seeds[0] = makerow(seed_0)\n",
+    "seeds[1] = makerow(seed_1)\n",
+    "seeds[2] = makerow(seed_2)\n",
+    "seeds[3] = makerow(seed_3)\n",
+    "seeds[4] = makerow(seed_4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topic_word_prior = []\n",
+    "for row in range(0, 20):\n",
+    "    topic_word_prior.append(seeds[row])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vocab.token2id['buffer']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1\n",
+      "5.0773985948299395e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(topic_word_prior[0][vocab.token2id['buffer']])\n",
+    "print(topic_word_prior[0][vocab.token2id['buffer']+1])"
+   ]
   }
  ],
  "metadata": {
