--- a/Bill_Evidence/billseeding.ipynb
+++ b/Bill_Evidence/billseeding.ipynb
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,6 +1046,24 @@
    "source": [
     "print(topic_word_prior[0][vocab.token2id['buffer']])\n",
     "print(topic_word_prior[0][vocab.token2id['buffer']+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LDA = gensim.models.ldamodel.LdaModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lda_model = LDA(corpus=doc_word_matrix, id2word=vocab, num_topics=20, eta=topic_word_prior)"
    ]
   }
  ],
