--- a/Report/03 -LDA and Prior Seeding.ipynb
+++ b/Report/03 -LDA and Prior Seeding.ipynb
@@ -1063,10 +1063,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* [1]\n",
-    "* [2]\n",
-    "* [3]\n",
-    "* [4]"
+    "* [1] M. A. Williams, S. Dey, R. C. Barranco, S. M. Naim, M. S. Hossain, M. Akbar, \"Analyzing Evolving Trends of Vulnerabilities in National Vulnerability Database,\" 2018 IEEE International Conference on Big Data (Big Data), 2018, pp. 3011-3020, doi: 10.1109/BigData.2018.8622299. \n",
+    "* [2] https://www.youtube.com/watch?v=UkmIljRIG_M\n",
+    "* [3] F. Rosner, A. Hinneburg, M. Röder, M. Nettling, A. Both, \"Evaluating topic coherence measures,\" 2013\n",
+    "* [4] J. Chang,  & J. Boyd-Graber, S. Gerrish, C. Wang & D. Blei, \"Reading Tea Leaves: How Humans Interpret Topic Models.\" Neural Information Processing Systems. 32. 288-296, 2009"
    ]
   }
  ],
